feature(process-file) refactor rental receipt rules